--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@
 
 */DioDocsStudy.Excel/ExcelActivator.cs
 */DioDocsStudy.Pdf/PdfActivator.cs
+*/ManageTableSample/ExcelActivator.cs
 *.pfx
 *.pvk
 *.cer
