--- a/ReportBuilder/InvoiceBuilder.App/packages.config
+++ b/ReportBuilder/InvoiceBuilder.App/packages.config
@@ -4,6 +4,7 @@
   <package id="ControlzEx" version="3.0.2.4" targetFramework="net472" />
   <package id="Dapper" version="1.50.5" targetFramework="net472" />
   <package id="MahApps.Metro" version="1.6.0" targetFramework="net472" />
+  <package id="Mapster" version="3.2.0" targetFramework="net472" />
   <package id="MaterialDesignColors" version="1.1.1" targetFramework="net472" />
   <package id="MaterialDesignThemes" version="2.5.0.1205" targetFramework="net472" />
   <package id="MaterialDesignThemes.MahApps" version="0.0.12" targetFramework="net472" />
