--- a/ReportBuilder/InvoiceBuilder.UseCase.Impl/InvoiceBuilder.UseCase.Impl.csproj
+++ b/ReportBuilder/InvoiceBuilder.UseCase.Impl/InvoiceBuilder.UseCase.Impl.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Mapster" Version="3.2.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\InvoiceBuilder.Repository\InvoiceBuilder.Repository.csproj" />
     <ProjectReference Include="..\InvoiceBuilder.UseCase\InvoiceBuilder.UseCase.csproj" />
   </ItemGroup>
