--- a/ReportBuilder/InvoiceBuilder.App/App.config
+++ b/ReportBuilder/InvoiceBuilder.App/App.config
@@ -1,5 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
+  <configSections>
+    <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+      <section name="InvoiceBuilder.App.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    </sectionGroup>
+  </configSections>
   <connectionStrings>
     <add name="AdventureWorks2017" connectionString="Data Source=localhost\MSSQLSERVER01;Initial Catalog=AdventureWorks2017;Integrated Security=True;MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
@@ -18,4 +23,11 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
+  <applicationSettings>
+    <InvoiceBuilder.App.Properties.Settings>
+      <setting name="Endpoint" serializeAs="String">
+        <value>https://localhost:44327/api/values</value>
+      </setting>
+    </InvoiceBuilder.App.Properties.Settings>
+  </applicationSettings>
 </configuration>
