--- a/ReportBuilder/InvoiceBuilder.UseCase.Impl/InvoiceBuilder.UseCase.Impl.csproj
+++ b/ReportBuilder/InvoiceBuilder.UseCase.Impl/InvoiceBuilder.UseCase.Impl.csproj
@@ -9,6 +9,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\InvoiceBuilder.ReportBuilder\InvoiceBuilder.ReportBuilder.csproj" />
     <ProjectReference Include="..\InvoiceBuilder.Repository\InvoiceBuilder.Repository.csproj" />
     <ProjectReference Include="..\InvoiceBuilder.UseCase\InvoiceBuilder.UseCase.csproj" />
   </ItemGroup>
