--- a/InvoiceBuilder/InvoiceBuilder.App/InvoiceBuilder.App.csproj
+++ b/InvoiceBuilder/InvoiceBuilder.App/InvoiceBuilder.App.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.1</TargetFramework>
+    <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
   </PropertyGroup>
 
   <ItemGroup>
@@ -25,6 +26,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.App" Version="2.1.0" />
+    <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.1.1" />
     <PackageReference Include="Microsoft.VisualStudio.Web.BrowserLink" Version="2.1.0" />
     <PackageReference Include="C1.AspNetCore.Mvc.ja" Version="1.0.20183.176" />
     <PackageReference Include="SimpleInjector.Extras.DynamicProxy" Version="1.1.0" />
