--- a/InvoiceService/InvoiceService.UseCase.Impl/InvoiceService.UseCase.Impl.csproj
+++ b/InvoiceService/InvoiceService.UseCase.Impl/InvoiceService.UseCase.Impl.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Mapster" Version="3.2.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\InvoiceService.Repository\InvoiceService.Repository.csproj" />
     <ProjectReference Include="..\InvoiceService.UseCase\InvoiceService.UseCase.csproj" />
     <ProjectReference Include="..\ReportService\ReportService.csproj" />
