記事書くのに都合が悪いので一旦追加！

--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@
 */DioDocsStudy.Excel/ExcelActivator.cs
 */DioDocsStudy.Pdf/PdfActivator.cs
 */ManageTableSample/ExcelActivator.cs
+*/InvoiceService.Console/App.config
 *.pfx
 *.pvk
 *.cer
