--- a/Benchmarks/Benchmarks.Functions/Benchmarks.Functions.csproj
+++ b/Benchmarks/Benchmarks.Functions/Benchmarks.Functions.csproj
@@ -6,6 +6,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.Azure.WebJobs.Extensions.Storage" Version="3.0.7" />
     <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="1.0.29" />
+    <PackageReference Include="System.Drawing.Common" Version="4.5.1" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Benchmarks.ReportBuilder\Benchmarks.ReportBuilder.csproj" />
