--- a/TemplateStudy/DataSourceBenckmark/DataSourceBenckmark.csproj
+++ b/TemplateStudy/DataSourceBenckmark/DataSourceBenckmark.csproj
@@ -8,8 +8,8 @@
   <ItemGroup>
     <PackageReference Include="BenchmarkDotNet" Version="0.12.1" />
     <PackageReference Include="Dapper" Version="2.0.35" />
-    <PackageReference Include="GrapeCity.Documents.Excel" Version="3.1.1" />
-    <PackageReference Include="Microsoft.Data.SqlClient" Version="1.1.2" />
+    <PackageReference Include="GrapeCity.DioDocs.Excel.ja" Version="3.1.2" />
+    <PackageReference Include="Microsoft.Data.SqlClient" Version="1.1.3" />
   </ItemGroup>
 
   <ItemGroup>
