--- a/TemplateStudy/TemplateStudyFromDatabase/TemplateStudyFromDatabase.csproj
+++ b/TemplateStudy/TemplateStudyFromDatabase/TemplateStudyFromDatabase.csproj
@@ -6,8 +6,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="GrapeCity.Documents.Excel" Version="3.1.1" />
-    <PackageReference Include="Microsoft.Data.SqlClient" Version="1.1.2" />
+    <PackageReference Include="GrapeCity.DioDocs.Excel.ja" Version="3.1.2" />
+    <PackageReference Include="Microsoft.Data.SqlClient" Version="1.1.3" />
   </ItemGroup>
 
   <ItemGroup>
