--- a/TemplateStudy/WorksheetTemplate/WorksheetTemplate.csproj
+++ b/TemplateStudy/WorksheetTemplate/WorksheetTemplate.csproj
@@ -6,7 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="GrapeCity.Documents.Excel" Version="3.1.1" />
+    <PackageReference Include="GrapeCity.DioDocs.Excel.ja" Version="3.1.2" />
   </ItemGroup>
 
   <ItemGroup>
